Correcting calendar z-index
As reported on tracker http://joomlacode.org/gf/project/joomla/tracker/?action=TrackerItemEdit&tracker_item_id=29765,
the calendar renders below the administrator top toolbar when it is called on top rows (ex: changing an article "Start publishing" date)

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -6577,3 +6577,6 @@ ul.treeselect ul.dropdown-menu li {
 	padding: 0 5px;
 	border: none;
 }
+div.calendar {
+    z-index: 1030;
+}
